# new-folder

./: .gitignore  Cargo.toml  Taskfile.yml  build.rs  rustfmt.toml
.cargo/: config.toml
src/: gui.rs  main.rs
