[package]
name = "new-folder"
version = "2.0.0"
edition = "2024"
build = "build.rs"

[package.metadata.winresource]
FileDescription = "NewFolder"
ProductName = "NewFolder"

[target.'cfg(windows)'.build-dependencies]
winresource = "^0.1"

[dependencies]
fltk = { version = "^1.5", features = ["fltk-bundled"] }
fltk-theme = "^0.7"
native-dialog = { version = "^0.9", features = ["windows_dpi_awareness", "windows_visual_styles"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "^0.60", features = ["Win32_Graphics_Dwm"] }

[profile.release]
codegen-units = 1
lto = true # "thin"
opt-level = "s"
panic = "abort"
strip = true
